fixed spacing o park cards and styled park details

--- a/src/components/HeaderComponents/Header.module.css
+++ b/src/components/HeaderComponents/Header.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     /* background: rgb(121,185,103);
 background: linear-gradient(3deg, rgba(121,185,103,1) 0%, rgba(105,183,113,1) 24%, rgba(218,232,188,1) 100%); */
 background-color: rgb(109, 146, 109);
@@ -19,7 +20,14 @@ background-color: rgb(109, 146, 109);
     border: none;
     background-color: transparent;
     color: whitesmoke;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
     
+}
+
+h2 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
 }
 
 .button:hover {
