--- a/src/components/HomeComponents/ParkContainer.module.css
+++ b/src/components/HomeComponents/ParkContainer.module.css
@@ -1,5 +1,5 @@
 .page {
-    background-color: darkslategray;
+    background-color: whitesmoke;
 }
 
 .pic {
@@ -28,6 +28,8 @@
 
 .container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   gap: 50px;
