--- a/src/components/elements/ParkDetails.module.css
+++ b/src/components/elements/ParkDetails.module.css
@@ -26,16 +26,49 @@
     
 }
 
+.info_container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+background-color: rgb(109, 146, 109);
+
+    margin: 20px;
+    padding: 10px;
+}
+
 h4 {
     text-align: left;
     padding: 10px;
+    text-decoration: underline;
 }
 
 .directions {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+    margin: 20px;
+}
+
+.weather_container {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+background-color: rgb(109, 146, 109);
+
+    align-items: flex-start;
+    padding: 10px;
+    margin: 20px;
+}
+
+.activities_container {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    width: 300px;
     align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 50%;
+    height: 100%;
+    padding: 10px;
+    margin: 20px;
+    border: solid 2px black;
 }
